5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1104.log
== TEST (2019-04-29 21:48:19) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)


	
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:51:46) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
	elif:
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:51:55) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
elif:
	print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:07) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
		elif:
			print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- ERROR:
File "XXXX", line 11
    elif:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:19) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
	elif:
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:52:26) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
	elif:
	print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- ERROR:
File "XXXX", line 11
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:53:58) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
elif(b < c)
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- ERROR:
File "XXXX", line 11
    elif(b < c)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:54:03) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Ha intersecao")
elif(b < c):
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:56:59) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Nao ha intersecao")
elif(b < c):
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:57:22) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) and (d > c)):
	print("Nao ha intersecao")
elif(b < c):
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- EXECUTION TIME:
0.154384
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:57:40) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b > a) or (d > c)):
	print("Nao ha intersecao")
elif(b < c):
		print("Nao ha intersecao")
else:
	print("entradas invalidas")
-- EXECUTION TIME:
0.124343
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:59:15) 
-- CODE:
a = float(input("valor de a: "))
b = float(input("valor de b: "))
c = float(input("valor de c: "))
d = float(input("valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif(b < c):
		print("Nao ha intersecao")
else:
	print("Ha intersecao")
-- EXECUTION TIME:
0.195125
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
